# rug

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  install.sh
fixtures/: README.md  reset.sh
fixtures/apps/api/: main.tf  variables.tf
fixtures/apps/web/: main.tf  variables.tf
fixtures/data/lake/: .terraform.lock.hcl  main.tf  variables.tf
fixtures/data/warehouse/: main.tf  variables.tf
fixtures/infra/eks/: main.tf  variables.tf
fixtures/infra/vpc/: main.tf  outputs.tf  variables.tf
fixtures/legacy/monolith/: main.tf  terraform.tfstate  variables.tf
fixtures/platform/: main.tf  variables.tf
fixtures/platform/deep-tree/: .terraform.lock.hcl  main.tf  terraform.tfstate
fixtures/platform/dns/: main.tf  variables.tf
fixtures/platform/networking/: main.tf  variables.tf
fixtures/remote-state/: docker-compose.yml
fixtures/remote-state/demo/: .terraform.lock.hcl  main.tf
fixtures/services/all-operations/: main.tf  terraform.tfstate
fixtures/services/api-gateway/: main.tf  (+2 more)
plans/: plan-a-refactor.md  plan-b-ui-redesign.md
scripts/: README.md  record-demos.sh  release.sh
src/: app.rs  config.rs  discovery.rs  engine.rs  lock.rs  main.rs  module.rs  plan_cache.rs  runner.rs  state.rs  task.rs  util.rs
src/ui/: clipboard.rs  keybar.rs  layout.rs  mod.rs  output.rs  output_layout.rs  run.rs  select.rs  tasks.rs  theme.rs  tree.rs  widgets.rs  wrap.rs
tapes/: README.md  demo-cached-plan.tape  demo-explorer.tape  demo-filter.tape  demo-headless.tape  demo-hero.tape  demo-run.tape  demo-select.tape  demo-targeted.tape  demo-tui.tape
(+28 files in other folders)
