[package]
name = "rug"
version = "0.13.0"
edition = "2021"
description = "A terraform/tofu multiplexer: discovers root modules under a directory tree and runs commands across them, as a TUI or headless CLI"
repository = "https://github.com/terrabyteian/rug"

[[bin]]
name = "rug"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
walkdir = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
libc = "0.2"
tempfile = "3"
unicode-width = "=0.2.0"
arboard = "3.6.1"
